<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_general">
        <ListPreference
            app:defaultValue="system"
            app:entries="@array/interface_language_entries"
            app:entryValues="@array/interface_language_values"
            app:iconSpaceReserved="false"
            app:key="interface_language"
            app:title="@string/settings_interface_language"
            app:useSimpleSummaryProvider="true" />
        <CheckBoxPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="show_notification_control"
            app:summary="@string/settings_global_show_notification_control_sum"
            app:title="@string/settings_global_show_notification_control" />
        <CheckBoxPreference
            app:defaultValue="true"
            app:dependency="show_notification_control"
            app:iconSpaceReserved="false"
            app:key="show_floating_control"
            app:summary="@string/settings_global_show_floating_control_sum"
            app:title="@string/settings_global_show_floating_control" />
        <CheckBoxPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="allow_multiple_floating_pictures"
            app:summary="@string/settings_global_allow_multiple_floating_pictures_sum"
            app:title="@string/settings_global_allow_multiple_floating_pictures" />
        <CheckBoxPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="allow_global_drag_over_screen"
            app:summary="@string/settings_global_allow_drag_over_screen_sum"
            app:title="@string/settings_global_allow_drag_over_screen" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="new_picture_quality"
            app:summary="@string/settings_global_picture_quality_sum"
            app:title="@string/settings_global_picture_quality" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="export_backup"
            app:summary="@string/backup_export_summary"
            app:title="@string/backup_export" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="import_legacy_data"
            app:summary="@string/backup_restore_summary"
            app:title="@string/backup_restore" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_global_advanced">
        <CheckBoxPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="touchable_position_edit"
            app:summary="@string/settings_global_advanced_touchable_position_edit_sum"
            app:title="@string/settings_global_advanced_touchable_position_edit" />
        <CheckBoxPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="pinch_rotation"
            app:summary="@string/settings_global_pinch_rotation_sum"
            app:title="@string/settings_global_pinch_rotation" />
        <CheckBoxPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="save_gesture_adjustments"
            app:summary="@string/settings_global_save_gesture_adjustments_sum"
            app:title="@string/settings_global_save_gesture_adjustments" />
        <CheckBoxPreference
            app:defaultValue="false"
            app:dependency="save_gesture_adjustments"
            app:iconSpaceReserved="false"
            app:key="lock_gestures_after_save"
            app:summary="@string/settings_global_lock_gestures_after_save_sum"
            app:title="@string/settings_global_lock_gestures_after_save" />
    </PreferenceCategory>

</PreferenceScreen>
